[package]
name = "minesweeper"
version = "1.1.0"
authors = ["Alexander Kuvaev <alexander@kuvaev.me>"]
description = "Simple minesweeper in Rust"
repository = "https://github.com/Vinatorul/minesweeper-rs.git"
readme = "README.md"
license = "MIT"
keywords = ["minesweeper", "game"]

[dependencies]
piston_window = "~0.25.0"
clap = "^1.4"
rand = "^0.3"
find_folder = "^0.3"
chrono = "^0.2"
