[package]
name = "minesweeper"
version = "1.2.1"
authors = ["Alexander Kuvaev <alexander@kuvaev.me>"]
description = "Simple minesweeper in Rust"
repository = "https://github.com/Vinatorul/minesweeper-rs.git"
readme = "README.md"
license = "MIT"
keywords = ["minesweeper", "game"]

[dependencies]
piston_window = "~0.33.0"
clap = "^1.5"
rand = "^0.3"
find_folder = "^0.3"
chrono = "^0.2"
